@@ -1,7 +1,7 @@
 #ifndef STREAMSERVICE_H
 #define STREAMSERVICE_H
 
-// $Id: StreamService.h,v 1.4 2008/02/21 14:17:41 biery Exp $
+// $Id: StreamService.h,v 1.5 2008/02/27 16:00:52 meschi Exp $
 
 // - handling output files per stream make the problem 1-dimensional 
 // - allows to use different file handling rules per stream
@@ -54,6 +54,7 @@ namespace edm {
       void   setSourceId(std::string s)      { sourceId_ = s; }
       void   setFileName(std::string s)      { fileName_ = s; }
       void   setFilePath(std::string s)      { filePath_ = s; }
+      void   setMaxFileSize(int x); 
       void   setMathBoxPath(std::string s)   { mailboxPath_ = s; }
       void   setSetupLabel(std::string s)    { setupLabel_ = s; }
       void   setHighWaterMark(double d)      { highWaterMark_ = d; }
@@ -99,6 +100,7 @@ namespace edm {
       // output module parameter
       std::string fileName_;
       std::string filePath_;
+      int    maxFileSizeInMB_;
       std::string mailboxPath_;
       std::string setupLabel_;
       std::string streamLabel_;
