@@ -1,3 +1,14 @@
+2008-03-03  Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V03-09-07
+	* modifications to override stream maxSize from xdaq 
+	
+2008-03-03  Harry Cheung <cheung@fnal.gov>
+
+	* tag V03-09-06 
+	* Remove unused variable and printout from the thread monitoring workloop
+	* Enable consumers to select an SM stream by the SM streamLabel
+
 2008-02-25  Emilio Meschi <emilio.meschi@cern.ch>
 
 	* tag V03-09-05 
@@ -8,7 +19,7 @@
 	* added findStreamName utility to extract stream name from entry in filelist
 	* modified StreamService to use a mutex around access to file list
 	* replaced application icons
-	
+
 2008-02-21  Harry Cheung <cheung@fnal.gov>
 
 	* tag V03-09-04 
